--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7975020482105880"
+     crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مشغل فيديوهات البث المباشر</title>
+    <title>   BY ╭ᶫ⁷╯Ｌ７ＡＪ ¹</title>
    <style>
    body {
     font-family: Arial, sans-serif;
